firewall.conf
# Generated by iptables-save v1.4.21 on Mon Nov  4 03:32:26 2019
*filter
:INPUT DROP [14:560]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.20.2/32 -i eth2 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.20.3/32 -i eth2 -j ACCEPT
-A INPUT -s 192.168.20.3/32 -i eth -j ACCEPT
-A INPUT -s 192.168.20.3/32 -i eth1 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.20.4/32 -d 192.168.10.3/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A FORWARD -s 192.168.20.4/32 -d 192.168.10.3/32 -p tcp -m tcp --dport 8443 -j ACCEPT
-A FORWARD -s 192.168.10.3/32 -d 192.168.20.4/32 -p tcp -j ACCEPT
-A FORWARD -s 192.168.20.3/32 -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o eth2 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -d 192.168.20.2/32 -p tcp -j ACCEPT
-A OUTPUT -d 192.168.20.3/32 -j ACCEPT
COMMIT
# Completed on Mon Nov  4 03:32:26 2019
# Generated by iptables-save v1.4.21 on Mon Nov  4 03:32:26 2019
*nat
:PREROUTING ACCEPT [141:10298]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s 192.168.20.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 192.168.10.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.0.0.0/8 -o eth0 -j MASQUERADE
COMMIT
# Completed on Mon Nov  4 03:32:26 2019
